// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getHeadline should display a headline on its own 1`] = `
"
            <h1>
                Test Headline
            </h1>
        "
`;

exports[`getHeadline should display a headline with only the byline 1`] = `
"
            <h1>
                
                <span class=\\"header-top-headline\\"
                    >Test Headline
                </span>
                <span class=\\"header-top-byline\\"
                    ><p>Test Byline</p>
                </span>
            </h1>
        "
`;

exports[`getHeadline should display a headline with the byline and quotes 1`] = `
"
            <h1>
                <Quotes />
                <span class=\\"header-top-headline\\"
                    >Test Headline
                </span>
                <span class=\\"header-top-byline\\"
                    ><p>Test Byline</p>
                </span>
            </h1>
        "
`;
